from/to predictions + additional error handling + seed change

--- a/JASP-Desktop/analysisforms/MachineLearning/mlclusteringkmeansform.ui
+++ b/JASP-Desktop/analysisforms/MachineLearning/mlclusteringkmeansform.ui
@@ -957,15 +957,11 @@
             <string/>
            </property>
            <layout class="QGridLayout" name="gridLayout_9">
-            <item row="0" column="0">
-             <widget class="QLabel" name="label_4">
-              <property name="text">
-               <string>Seed</string>
-              </property>
-             </widget>
-            </item>
             <item row="0" column="1">
              <widget class="BoundTextBox" name="seed">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
               <property name="maximumSize">
                <size>
                 <width>50</width>
@@ -999,6 +995,13 @@
                </size>
               </property>
              </spacer>
+            </item>
+            <item row="0" column="0">
+             <widget class="BoundCheckBox" name="seedBox">
+              <property name="text">
+               <string>Seed</string>
+              </property>
+             </widget>
             </item>
            </layout>
           </widget>
@@ -1240,6 +1243,22 @@
     <hint type="destinationlabel">
      <x>486</x>
      <y>550</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>seedBox</sender>
+   <signal>clicked(bool)</signal>
+   <receiver>seed</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>173</x>
+     <y>663</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>227</x>
+     <y>663</y>
     </hint>
    </hints>
   </connection>
