--- a/JASP-Desktop/analysisforms/MachineLearning/mlclassificationknnform.ui
+++ b/JASP-Desktop/analysisforms/MachineLearning/mlclassificationknnform.ui
@@ -357,30 +357,102 @@
            <property name="title">
             <string>Tables</string>
            </property>
-           <layout class="QGridLayout" name="gridLayout_23">
-            <item row="1" column="0">
-             <widget class="BoundCheckBox" name="newPredictions">
-              <property name="text">
-               <string>Predictions</string>
-              </property>
-             </widget>
-            </item>
-            <item row="0" column="0">
+           <layout class="QGridLayout" name="gridLayout_19">
+            <item row="0" column="0" colspan="3">
              <widget class="BoundCheckBox" name="newFrequencies">
               <property name="text">
                <string>Frequencies</string>
               </property>
              </widget>
             </item>
+            <item row="1" column="0" colspan="3">
+             <widget class="BoundCheckBox" name="newPredictions">
+              <property name="text">
+               <string>Predictions</string>
+              </property>
+             </widget>
+            </item>
             <item row="2" column="0">
-             <spacer name="verticalSpacer_12">
+             <spacer name="horizontalSpacer_11">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>42</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item row="2" column="1">
+             <widget class="QLabel" name="labelPredFrom">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+              <property name="text">
+               <string>From</string>
+              </property>
+             </widget>
+            </item>
+            <item row="2" column="2" colspan="2">
+             <widget class="BoundTextBox" name="predFrom">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+              <property name="maximumSize">
+               <size>
+                <width>50</width>
+                <height>16777215</height>
+               </size>
+              </property>
+             </widget>
+            </item>
+            <item row="2" column="4">
+             <widget class="QLabel" name="labelPredTo">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+              <property name="text">
+               <string>to</string>
+              </property>
+             </widget>
+            </item>
+            <item row="2" column="5">
+             <widget class="BoundTextBox" name="predTo">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+              <property name="maximumSize">
+               <size>
+                <width>50</width>
+                <height>16777215</height>
+               </size>
+              </property>
+             </widget>
+            </item>
+            <item row="2" column="6">
+             <spacer name="horizontalSpacer_12">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>444</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item row="3" column="3">
+             <spacer name="verticalSpacer_13">
               <property name="orientation">
                <enum>Qt::Vertical</enum>
               </property>
               <property name="sizeHint" stdset="0">
                <size>
                 <width>20</width>
-                <height>40</height>
+                <height>13</height>
                </size>
               </property>
              </spacer>
@@ -514,19 +586,6 @@
             <bool>false</bool>
            </property>
            <layout class="QGridLayout" name="gridLayout_20">
-            <item row="2" column="0">
-             <widget class="QRadioButton" name="roughFix">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="text">
-               <string>Rough fix</string>
-              </property>
-             </widget>
-            </item>
             <item row="0" column="0">
              <widget class="QRadioButton" name="deleteListWise">
               <property name="sizePolicy">
@@ -537,6 +596,13 @@
               </property>
               <property name="text">
                <string>Delete listwise</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="0">
+             <widget class="QRadioButton" name="predict">
+              <property name="text">
+               <string>Predict</string>
               </property>
              </widget>
             </item>
@@ -553,10 +619,16 @@
               </property>
              </spacer>
             </item>
-            <item row="1" column="0">
-             <widget class="QRadioButton" name="predict">
+            <item row="2" column="0">
+             <widget class="QRadioButton" name="roughFix">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
               <property name="text">
-               <string>Predict</string>
+               <string>Rough fix</string>
               </property>
              </widget>
             </item>
@@ -855,15 +927,11 @@
             <string/>
            </property>
            <layout class="QGridLayout" name="gridLayout_15">
-            <item row="0" column="0">
-             <widget class="QLabel" name="label_6">
-              <property name="text">
-               <string>Seed</string>
-              </property>
-             </widget>
-            </item>
             <item row="0" column="1">
              <widget class="BoundTextBox" name="seed">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
               <property name="minimumSize">
                <size>
                 <width>50</width>
@@ -903,6 +971,13 @@
                </size>
               </property>
              </spacer>
+            </item>
+            <item row="0" column="0">
+             <widget class="BoundCheckBox" name="seedBox">
+              <property name="text">
+               <string>Seed</string>
+              </property>
+             </widget>
             </item>
            </layout>
           </widget>
@@ -987,13 +1062,13 @@
               </property>
               <property name="minimumSize">
                <size>
-                <width>60</width>
+                <width>50</width>
                 <height>0</height>
                </size>
               </property>
               <property name="maximumSize">
                <size>
-                <width>60</width>
+                <width>50</width>
                 <height>16777215</height>
                </size>
               </property>
@@ -1073,13 +1148,13 @@
               </property>
               <property name="minimumSize">
                <size>
-                <width>60</width>
+                <width>50</width>
                 <height>0</height>
                </size>
               </property>
               <property name="maximumSize">
                <size>
-                <width>60</width>
+                <width>50</width>
                 <height>16777215</height>
                </size>
               </property>
@@ -1115,13 +1190,13 @@
               </property>
               <property name="minimumSize">
                <size>
-                <width>60</width>
+                <width>50</width>
                 <height>0</height>
                </size>
               </property>
               <property name="maximumSize">
                <size>
-                <width>60</width>
+                <width>50</width>
                 <height>16777215</height>
                </size>
               </property>
@@ -1137,13 +1212,13 @@
               </property>
               <property name="minimumSize">
                <size>
-                <width>60</width>
+                <width>50</width>
                 <height>0</height>
                </size>
               </property>
               <property name="maximumSize">
                <size>
-                <width>60</width>
+                <width>50</width>
                 <height>16777215</height>
                </size>
               </property>
@@ -1181,6 +1256,18 @@
           <widget class="BoundComboBox" name="weights">
            <property name="enabled">
             <bool>true</bool>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>110</width>
+             <height>0</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>150</width>
+             <height>16777215</height>
+            </size>
            </property>
            <item>
             <property name="text">
@@ -1709,6 +1796,86 @@
     <hint type="destinationlabel">
      <x>394</x>
      <y>1413</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>newPredictions</sender>
+   <signal>clicked(bool)</signal>
+   <receiver>predFrom</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>69</x>
+     <y>1013</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>124</x>
+     <y>1038</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>newPredictions</sender>
+   <signal>clicked(bool)</signal>
+   <receiver>predTo</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>69</x>
+     <y>1013</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>196</x>
+     <y>1038</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>newPredictions</sender>
+   <signal>clicked(bool)</signal>
+   <receiver>labelPredFrom</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>69</x>
+     <y>1013</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>81</x>
+     <y>1039</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>newPredictions</sender>
+   <signal>clicked(bool)</signal>
+   <receiver>labelPredTo</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>69</x>
+     <y>1013</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>160</x>
+     <y>1039</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>seedBox</sender>
+   <signal>clicked(bool)</signal>
+   <receiver>seed</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>326</x>
+     <y>1388</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>380</x>
+     <y>1388</y>
     </hint>
    </hints>
   </connection>
