--- a/JASP-Desktop/analysisforms/MachineLearning/mlregressionknnform.ui
+++ b/JASP-Desktop/analysisforms/MachineLearning/mlregressionknnform.ui
@@ -240,6 +240,13 @@
             <bool>false</bool>
            </property>
            <layout class="QGridLayout" name="gridLayout_20">
+            <item row="1" column="0">
+             <widget class="QRadioButton" name="predict">
+              <property name="text">
+               <string>Predict</string>
+              </property>
+             </widget>
+            </item>
             <item row="2" column="1">
              <spacer name="horizontalSpacer">
               <property name="orientation">
@@ -279,12 +286,18 @@
               </property>
              </widget>
             </item>
-            <item row="1" column="0">
-             <widget class="QRadioButton" name="predict">
-              <property name="text">
-               <string>Predict</string>
+            <item row="3" column="0">
+             <spacer name="verticalSpacer_14">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
               </property>
-             </widget>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>40</height>
+               </size>
+              </property>
+             </spacer>
             </item>
            </layout>
           </widget>
@@ -490,6 +503,9 @@
            <layout class="QGridLayout" name="gridLayout_14">
             <item row="0" column="1">
              <widget class="BoundTextBox" name="seed">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
               <property name="maximumSize">
                <size>
                 <width>50</width>
@@ -511,13 +527,6 @@
               </property>
              </spacer>
             </item>
-            <item row="0" column="0">
-             <widget class="QLabel" name="label_6">
-              <property name="text">
-               <string>Seed</string>
-              </property>
-             </widget>
-            </item>
             <item row="0" column="2">
              <spacer name="horizontalSpacer_10">
               <property name="orientation">
@@ -530,6 +539,16 @@
                </size>
               </property>
              </spacer>
+            </item>
+            <item row="0" column="0">
+             <widget class="BoundCheckBox" name="seedBox">
+              <property name="enabled">
+               <bool>true</bool>
+              </property>
+              <property name="text">
+               <string>seed</string>
+              </property>
+             </widget>
             </item>
            </layout>
           </widget>
@@ -914,13 +933,13 @@
               </property>
               <property name="minimumSize">
                <size>
-                <width>60</width>
+                <width>50</width>
                 <height>0</height>
                </size>
               </property>
               <property name="maximumSize">
                <size>
-                <width>60</width>
+                <width>50</width>
                 <height>16777215</height>
                </size>
               </property>
@@ -956,13 +975,13 @@
               </property>
               <property name="minimumSize">
                <size>
-                <width>60</width>
+                <width>50</width>
                 <height>0</height>
                </size>
               </property>
               <property name="maximumSize">
                <size>
-                <width>60</width>
+                <width>50</width>
                 <height>16777215</height>
                </size>
               </property>
@@ -978,13 +997,13 @@
               </property>
               <property name="minimumSize">
                <size>
-                <width>60</width>
+                <width>50</width>
                 <height>0</height>
                </size>
               </property>
               <property name="maximumSize">
                <size>
-                <width>60</width>
+                <width>50</width>
                 <height>16777215</height>
                </size>
               </property>
@@ -1006,6 +1025,12 @@
              <widget class="BoundComboBox" name="weights">
               <property name="enabled">
                <bool>true</bool>
+              </property>
+              <property name="minimumSize">
+               <size>
+                <width>110</width>
+                <height>0</height>
+               </size>
               </property>
               <item>
                <property name="text">
@@ -1432,14 +1457,86 @@
             <string>Tables</string>
            </property>
            <layout class="QGridLayout" name="gridLayout_19">
-            <item row="0" column="0">
+            <item row="0" column="0" colspan="3">
              <widget class="BoundCheckBox" name="newPredictions">
               <property name="text">
                <string>Predictions</string>
               </property>
              </widget>
             </item>
-            <item row="1" column="0">
+            <item row="1" column="0" rowspan="2">
+             <spacer name="horizontalSpacer_11">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>36</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item row="1" column="1">
+             <widget class="QLabel" name="labelpredFrom">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+              <property name="text">
+               <string>From</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="2" colspan="2">
+             <widget class="BoundTextBox" name="predFrom">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+              <property name="maximumSize">
+               <size>
+                <width>50</width>
+                <height>16777215</height>
+               </size>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="4">
+             <widget class="QLabel" name="labelpredTo">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+              <property name="text">
+               <string>to</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="5">
+             <widget class="BoundTextBox" name="predTo">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+              <property name="maximumSize">
+               <size>
+                <width>50</width>
+                <height>16777215</height>
+               </size>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="6" rowspan="2">
+             <spacer name="horizontalSpacer_12">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>528</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item row="2" column="3">
              <spacer name="verticalSpacer_13">
               <property name="orientation">
                <enum>Qt::Vertical</enum>
@@ -1447,7 +1544,7 @@
               <property name="sizeHint" stdset="0">
                <size>
                 <width>20</width>
-                <height>91</height>
+                <height>15</height>
                </size>
               </property>
              </spacer>
@@ -1641,6 +1738,86 @@
     <hint type="destinationlabel">
      <x>450</x>
      <y>1394</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>newPredictions</sender>
+   <signal>clicked(bool)</signal>
+   <receiver>labelpredTo</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>66</x>
+     <y>1005</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>154</x>
+     <y>1029</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>newPredictions</sender>
+   <signal>clicked(bool)</signal>
+   <receiver>labelpredFrom</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>66</x>
+     <y>1005</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>75</x>
+     <y>1029</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>newPredictions</sender>
+   <signal>clicked(bool)</signal>
+   <receiver>predFrom</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>66</x>
+     <y>1005</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>118</x>
+     <y>1029</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>newPredictions</sender>
+   <signal>clicked(bool)</signal>
+   <receiver>predTo</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>66</x>
+     <y>1005</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>190</x>
+     <y>1029</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>seedBox</sender>
+   <signal>clicked(bool)</signal>
+   <receiver>seed</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>369</x>
+     <y>1435</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>423</x>
+     <y>1435</y>
     </hint>
    </hints>
   </connection>
