--- a/JASP-Desktop/analysisforms/MachineLearning/mlregressionrandomforestform.ui
+++ b/JASP-Desktop/analysisforms/MachineLearning/mlregressionrandomforestform.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>700</width>
-    <height>1619</height>
+    <height>1751</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -170,7 +170,7 @@
             <item row="1" column="0">
              <widget class="QRadioButton" name="auto_5">
               <property name="text">
-               <string>Auto</string>
+               <string>A&amp;uto</string>
               </property>
              </widget>
             </item>
@@ -823,7 +823,7 @@
        <widget class="GroupBox" name="groupBox_3">
         <property name="maximumSize">
          <size>
-          <width>300</width>
+          <width>16777215</width>
           <height>16777215</height>
          </size>
         </property>
@@ -838,14 +838,14 @@
            </property>
           </widget>
          </item>
-         <item row="1" column="0">
+         <item row="2" column="0">
           <widget class="BoundCheckBox" name="tableConfusion">
            <property name="text">
             <string>Confusion table (classification only)</string>
            </property>
           </widget>
          </item>
-         <item row="2" column="0">
+         <item row="3" column="0">
           <spacer name="verticalSpacer_7">
            <property name="orientation">
             <enum>Qt::Vertical</enum>
@@ -854,6 +854,19 @@
             <size>
              <width>20</width>
              <height>40</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item row="2" column="1">
+          <spacer name="horizontalSpacer_6">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
             </size>
            </property>
           </spacer>
