--- a/JASP-Desktop/mainwindow.ui
+++ b/JASP-Desktop/mainwindow.ui
@@ -185,6 +185,7 @@ QPushButton::menu-indicator {
           <widget class="RibbonSummaryStatistics" name="ribbonSummaryStatistics"/>
           <widget class="RibbonMetaAnalysis" name="ribbonMetaAnalysis"/>
           <widget class="RibbonNetworkAnalysis" name="ribbonNetworkAnalysis"/>
+          <widget class="RibbonMachineLearning" name="ribbonMachineLearning"/>
 <!-- Add ribbon widget page -->
          </widget>
         </item>
@@ -638,6 +639,12 @@ QTableView::item::last
    <class>RibbonReinforcementLearning</class>
    <extends>QWidget</extends>
    <header>ribbons/ribbonreinforcementlearning.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>RibbonMachineLearning</class>
+   <extends>QWidget</extends>
+   <header>ribbons/ribbonmachinelearning.h</header>
    <container>1</container>
   </customwidget>
 <!-- Add customwidget definition -->
